# dart_lmdb2

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: create-release.yml  dart.yml
dart_lmdb2/: .gitignore  .pubignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dartdoc_options.yaml  ffigen.yaml  pubspec.yaml
dart_lmdb2/example/: basic_crud.dart  example.dart  pubspec.yaml  statistics.dart  transactions.dart
dart_lmdb2/example/android/app/: build.gradle
dart_lmdb2/example/ios/: dart_lmdb2.podspec
dart_lmdb2/example/ios/Runner/: Info.plist
dart_lmdb2/example/lib/: main.dart
dart_lmdb2/lib/: dart_lmdb2.dart  lmdb.dart
dart_lmdb2/lib/src/: build_exception.dart  build_util.dart  builder_android.dart  builder_ios.dart  builder_native.dart  fetch_native.dart  generated_bindings.dart  lmdb2.dart  lmdb_class.dart  lmdb_cursor.dart  lmdb_native.dart  lmdb_transaction.dart  version.dart
dart_lmdb2/lib/src/native/: liblmdb.dylib
dart_lmdb2/lib/src/native/macos/: liblmdb.dylib
dart_lmdb2/lib/src/native/windows/: lmdb_static.lib
dart_lmdb2/test/: basic_operations_test.dart  cursors.dart  cursors_test.dart  flags_test.dart  mapsizes_test.dart  named_databases_test.dart  package_resolution_test.dart  statistics_test.dart  transaction_test.dart  version_integration_test.dart  version_test.dart
dart_lmdb2/tool/: build.dart  install-hooks.sh  verify_version.dart
dart_lmdb2/tool/git-hooks/: pre-commit
example/: basic_crud.dart  dart_lmdb2_example.dart  statistics.dart
flutter_lmdb2/: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  README.md  pubspec.yaml
flutter_lmdb2/android/: build.gradle  settings.gradle
flutter_lmdb2/android/src/main/: AndroidManifest.xml
flutter_lmdb2/android/src/main/kotlin/com/grammatek/flutter_lmdb2/: FlutterLmdb2Plugin.kt
flutter_lmdb2/example/: README.md  pubspec.yaml
flutter_lmdb2/example/android/app/: build.gradle
flutter_lmdb2/example/android/app/src/main/kotlin/com/example/flutter_lmdb2/: MainActivity.kt
flutter_lmdb2/example/ios/: CMakeListst.txt  flutter_lmdb2.podspec
flutter_lmdb2/example/ios/Runner/: Info.plist
flutter_lmdb2/example/ios/Runner.xcodeproj/: project.pbxproj
flutter_lmdb2/example/lib/: main.dart
flutter_lmdb2/example/macos/: Podfile
flutter_lmdb2/example/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_lmdb2/example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
flutter_lmdb2/example/macos/Runner.xcodeproj/: project.pbxproj
flutter_lmdb2/example/macos/Runner/Configs/: AppInfo.xcconfig
flutter_lmdb2/example/test/: platform_test.dart  widget_test.dart
flutter_lmdb2/ios/: .gitignore  dart_lmdb2.podspec  flutter_lmdb2.podspec
flutter_lmdb2/ios/Classes/: DartLmbd2Plugin.m  DartLmdb2Plugin.h  FlutterLmbd2Plugin.m  FlutterLmdb2Plugin.h
flutter_lmdb2/lib/: flutter_lmdb2.dart  lmdb.dart
flutter_lmdb2/lib/tool/: fetch_native.dart
flutter_lmdb2/macos/: flutter_lmdb2.podspec
flutter_lmdb2/macos/Classes/: FlutterLmdb2Plugin.swift
flutter_lmdb2/tool/: build.dart  fetch_native.dart
lib/: dart_lmdb2.dart
lib/src/: build_util.dart  database_stats.dart  lmdb2.dart  lmdb_config.dart  lmdb_constants.dart  lmdb_exception.dart
lib/src/native/: liblmdb.dylib
test/: basic_operations_test.dart  dart_lmdb2_test.dart  flags_test.dart  mapsizes_test.dart  named_databases_test.dart  statistics_test.dart  transaction_test.dart
tool/: build.dart  pubspec.yaml  release.dart
tool/hooks/: pre_build.dart
